@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-06-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/formats.rst: Add TopoL format as per Jaroslav Fojtik.
+
+</UL>
+<p>
 2009-06-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
