@@ -1,3 +1,7 @@
+2009-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/formats.rst: Add TopoL format as per Jaroslav Fojtik.
+
 2009-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: User provided LDFLAGS was being overwritten under
